plugins {
    id "java"
    id "java-library"
    id "io.freefair.lombok" version "8.7.1"
    id "maven-publish"
}

group 'com.cadiducho'
version '1.9'

java {
    withJavadocJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = project.group
            artifactId = rootProject.name
            version = project.version

            from components.java
        }
    }
    repositories {
        maven {
            name = "cadiduchoRepoSnapshots"
            url = "https://repo.cadiducho.com/snapshots"
            credentials(PasswordCredentials)
            authentication {
                basic(BasicAuthentication)
            }
        }
        maven {
            name = "releases"
            url = "https://repo.cadiducho.com/releases"
            credentials {
                username System.getenv("MAVEN_NAME")
                password System.getenv("MAVEN_PASSWORD")
            }
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
}

javadoc {
    source = sourceSets.main.allJava
}

sourceCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url "https://repo.cadiducho.com/releases"
    }
}

dependencies {
    api group: 'com.cadiducho', name: 'TelegramBotAPI', version: '6.9'

    //Tests
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.11.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.0'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.12.0'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
